--- a/4T/ch13.tex
+++ b/4T/ch13.tex
@@ -387,7 +387,7 @@ Jonah goes to speak to Trenton in his lab.  Victor, the guy we captured on one o
 
 ``What does that mean?''
 
-Trenton points to some pages of symbols on one of the screens.  ``That's another language, \hl{Alemán}\footnote{\textbf{q.google }http://en.wiktionary.org/wiki/alemán \textsubscript{01/27/13 12:11pm}}, actually.''
+Trenton points to some pages of symbols on one of the screens.  ``That's another language, \hl{Alemán}\footnote{\textbf{q.google }http://en.wiktionary.org/wiki/alem\`an \textsubscript{01/27/13 12:11pm}}, actually.''
 
 ``It is?  \hl{That's a language}\footnote{\textbf{q.google }As noted, the idea Directorate people have about ``languages'' isn't the same as ours, since they basically are only aware of one, and rarely if ever hear or read others. \textsubscript{01/27/13 12:12pm}}?'' Jonah says incredulously and shakes his head.  ``What were the SACs for, if there are eight of them?''
 
