--- a/4T/ch14.tex
+++ b/4T/ch14.tex
@@ -101,7 +101,9 @@ Gillian looks surprised, ``Really?  It seems like she's everywhere.''
 
 ``The ones in the Security Triumvirate, Senator Marechenko, Senator Bennett and Senator Timmons.  I don't think Senator Bennett likes Constable Langdon's father.  Ahh.... oh, remember in my report where we were in Cardoza and there was another Patrol Group there sent by another Senator?  The ones caused problems for us?''
 
-``You mean they sent the other Patrol Group?''``Oh no, I don't think so.  I think it was someone else.  But it would be good to find out who.''
+``You mean they sent the other Patrol Group?''
+
+``Oh no, I don't think so.  I think it was someone else.  But it would be good to find out who.''
 
 Gillian thinks.  ``I can give you some names, but I want to think carefully about what I want to share.  With you reporting to Morgan, that makes things difficult, although I think in this case it will be okay.  There is a lot to keep track of.  I am certain Agent Morgan is doing the same thing.''
 
