--- a/4T/ch17.tex
+++ b/4T/ch17.tex
@@ -292,7 +292,9 @@ Jaya frantically tries to remember what she wrote down in her report.
 
 ``Uhhhhh.... he called me a name?'' says Jaya tentatively.  ``He called me a.... tetris?''
 
-``Could it have been 'Tertius'?''``It could have been that, but it really sounded like \hl{tetris}\footnote{\textbf{q.google }Maybe we are in a video game, but I didn't think it was Tetris.... \textsubscript{04/06/13 2:07pm}}\footnote{$\rightarrow$\textbf{Suko T }I rather love that she insisted that it was Tetris after Morgan corrected her.  It's so Jaya and also very funny OOG. \textsubscript{04/06/13 4:25pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{04/07/13 1:23am}}.''
+``Could it have been 'Tertius'?''
+
+``It could have been that, but it really sounded like \hl{tetris}\footnote{\textbf{q.google }Maybe we are in a video game, but I didn't think it was Tetris.... \textsubscript{04/06/13 2:07pm}}\footnote{$\rightarrow$\textbf{Suko T }I rather love that she insisted that it was Tetris after Morgan corrected her.  It's so Jaya and also very funny OOG. \textsubscript{04/06/13 4:25pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{04/07/13 1:23am}}.''
 
 ``Hmm.  Now onto the other matter.  You have been cleared for active duty but are you ready?  You seem...distracted.'' says Morgan pointedly looking at Jaya's new bruises and cuts.
 
@@ -314,7 +316,9 @@ Jaya talks around the subject, claiming that her team is so good that any combin
 
 Morgan hands Jaya an envelope, which Jaya promptly opens, looking for money (there is only a letter inside).
 
-``Hayley is being promoted to Constable, please deliver this letter to her.''  Jaya nods and skims over the letter.  ``Cool.  Does this mean she gets a raise and stuff?''
+``Hayley is being promoted to Constable, please deliver this letter to her.''  
+
+Jaya nods and skims over the letter.  ``Cool.  Does this mean she gets a raise and stuff?''
 
 ``As an Incorporated, no, although something may be worked out with her contract holder.''
 
