--- a/4T/ch32.tex
+++ b/4T/ch32.tex
@@ -744,6 +744,138 @@ Timon's dad gently rubs Timon's mom's back and says evenly, ``Well, I suppose we
 
 
 \sceneHeadline{\hl{Hayley's Shore Leave- DX Station}}\footnote{\textbf{Suko T }Rebecca's written commentary interlaced with her note-taking during this scene was hilarious to me.  So I changed up the format here to include it in the blue column alongside the transcript so you can enjoy it too :D \textsubscript{09/16/14 2:51am}}+1\footnote{$\rightarrow$\textbf{q.google }Also: Hayley + Fili is \_awesome\_.  It's like hooking up two copies of Eliza to each other only \_much\_ funnier. \textsubscript{09/25/14 4:54pm}}
+\\
+\splitConvo{Hayley walks to the Fili's office. She is neatly dressed in her uniform but does have her rifle with her. It is a small room, with just a desk and some chairs. There are plaques on the walls certifying this person as a Fili. There's only one person inside. Hayley recognizes him from the few times he visited Gillian's house.}{}
+\splitConvo{Hayley politely waits until the Fili acknowledges her presence.}{}
+\splitConvo{``I have met you before,'' he says. ``You name is Hayley.''}{}
+\splitConvo{``Yes it is.''``You are the property of Gillian Vorrutyer?''``I am.''}{}
+\splitConvo{``You are also one of her proxies. \hl{Number six}\footnote{\textbf{q.google }I am not a number! I am a ... carefully cultivated slave with a name and public image. And also a number. \textsubscript{09/25/14 4:40pm}}+1\footnote{$\rightarrow$\textbf{Suko T }But we *are* numbers, they are f-ing tattooed onto our necks! :D \textsubscript{09/25/14 5:20pm}}\footnote{$\rightarrow$\textbf{q.google }Speak for yourself. Jonah is someone \_else's\_ number. \textsubscript{10/05/14 1:15pm}}, I believe.''}{}
+\splitConvo{``Yes I am.''}{}
+\splitConvo{The Fili refers a sheaf of papers, densely covered in numbers and words.}{}
+\splitConvo{``Shall we commence the appointment?'' asks Hayley. ``Or are you busy?''}{}
+\splitConvo{``You were asked to come here as a matter of course with regards to the estate.''``Yes,'' says Hayley and hands him the letter she was sent.}{}
+\splitConvo{He gives it only a cursory glance. ``I recall this. Very good, please have a seat.''}{}
+\splitConvo{Hayley sits down and neatly places her rifle to one side, within arm's reach.}{}
+\splitConvo{``Are you armed for a reason?'' asks the Fili.}{}
+\splitConvo{``Yes. But not a social one.''}{}
+\splitConvo{``Do you mind elaborating?''}{}
+\splitConvo{``It is for defense.''}{}
+\splitConvo{\hl{``Are we likely to be attacked?''}}{}
+\splitConvo{\hl{``You, probably not. But I may.''}}{}
+\splitConvo{\hl{``Here and now?''}}{}
+\splitConvo{\hl{``I hope not, but it is possible.''}}{}
+\splitConvo{\hl{``I am uneasy,'' say the Fili calmly.}\footnote{\textbf{q.google } \textsubscript{09/25/14 4:38pm}}}{}
+\splitConvo{\hl{``I understand. That is why I have it,'' says Hayley, with the same equanimity. She adds, ``I will protect you also.'}'\footnote{\textbf{Rebecca S. }The Hayley motto. Be prepared and PROTECT EVERYONE \textsubscript{09/18/14 10:04am}}\footnote{$\rightarrow$\textbf{Suko T }Of course! Isn't that the TA motto? Either that or the Boy Scouts. And she wouldn't protect everyone.... There's a short list of people she'd calmly watch suffocate in vaccuum and not lift a finger to help them. And a shorter list where she'd actually rip off their respirator and push the ``evacuate to space'' button. :) \textsubscript{09/18/14 1:10pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }I'm fascinated to know who is on these two lists. \textsubscript{09/18/14 2:20pm}}\footnote{$\rightarrow$\textbf{q.google }''The Hayley motto. Be prepared and PROTECT EVERYONE'' Oh God... you know what means don't you? When Hayley ascends she'll be a \_Praetor\_. \textsubscript{09/25/14 4:38pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }You may be under a misapprehension that praetors protect 'everyone'. \textsubscript{09/25/14 5:19pm}}+1\footnote{$\rightarrow$\textbf{q.google }Not really. Rook said Praetors ``protect''. I assume they can interpret that the way they like. ``PROTECT EVERYONE'' is a subset of ``protect''. \textsubscript{10/05/14 1:28pm}}'}{It's like robots talking to each other!}
+\splitConvo{``That is appreciated. The remainder of our conversation will be under Fili-Client privilege. You will be standing in as the proxy for Gillian Vorrutyer, while I am her representative for all matters pertaining to contracts, estates, property, holdings, incorporations, and businesses.'''}{}
+\splitConvo{``I understand. I may only discuss these matters with yourself or Ms. Vorrutyer.'''}{}
+\splitConvo{``I must warn you that as an Incorporated piece of property of Gillian Vorrutyer's, though you have been designated as proxy, should any of your actions here exceed the boundaries of behaviour as defined by a rational man, they could be overturned in a court of law.'''}{}
+\splitConvo{``I understand.'' Hayley hesitates and then asks, ``I am untutored in many legal matters. If you would you be so kind as to give me a warning when I am approaching such a state, I would appreciate it.'''}{}
+\splitConvo{``Of course.'''}{}
+\splitConvo{``Thank you.'''}{}
+\splitConvo{``Very well then, my first warning is this. Should you act in a matter that betrays the trust imparted to you as proxy by Gillian Vorrutyer, you will be fully liable for any consequences, which could include up to forfeiture of all properties, estates, and your life.'''}{}
+\splitConvo{``I fully understand.''}{}
+\splitConvo{``Thank you. I believe that you, in order to prove that you are in fact, Hayley, and are Gillian Vorrutyer's proxy, property and Incorporated by her, you have some codes that you can repeat to me now.''}{}
+\splitConvo{``I do. Are you prepared to receive them?'' asks Hayley.}{}
+\splitConvo{``I am.''}{}
+\splitConvo{Hayley closes her eyes and takes her time to recall the codes correctly. When she opens her eyes, she reels off the string of code numbers smoothly. ``Is that sufficient proof?'' she asks.'}{}
+\splitConvo{``That is both proof and understood by myself. And if I may make an editorial comment?'''}{}
+\splitConvo{``Yes please.'''}{}
+\splitConvo{``It was impressive as well.'''}{Is the Fili flirting with Hayley?}
+\splitConvo{``Thank you.'''}{}
+\splitConvo{``Two legal \hl{actions}\footnote{\textbf{Nathaniel Ford }Probably shouldn't be 'legal actions' in the modern colloquial sense, so much as 'legal matters'. It's not like anyone is being sued, per se. \textsubscript{09/18/14 10:37am}} have been launched against the estate of Gillian Vorrutyer,'' says the Fili. Hayley sits up even more alertly and leans forward slightly. He continues, ``The first is a claim of death. Can you confirm or deny this?''}{}
+\splitConvo{Hayley pauses to think. ``What is the legal definition they are using?'' she asks.}{}
+\splitConvo{``Let me be clear. You are asking me, what is the legal definition of death being used the claim of death?''}{}
+\splitConvo{``Yes.''}{}
+\splitConvo{``This request on your behalf has been noted. They are claiming that she has ceased living functions and is no longer capable of, for instance, procreating.''}{}
+\splitConvo{``Thank you for the clarification. \hl{It is my understanding that she is not deceased by that definition}\footnote{\textbf{q.google}QooC \textsubscript{09/25/14 4:41pm}}. She is living.''}{OH shit!  Gillian is alive??}
+\splitConvo{\hl{``Do you have evidence?''}}{}
+\splitConvo{\hl{``Yes, a recent message from Ms. Vorrutyer.''}}{}
+\splitConvo{`\hl{`And what does this message state?''}}{}
+\splitConvo{\hl{``Hi.}\footnote{\textbf{q.google } ROFL\textsubscript{09/25/14 4:41pm}}''}{}
+\splitConvo{``Is that the extent of the message?''}{Vote for hand placement for this scene:  The Fili: palms flat on table, fingers closed, thumbs flexed.
+Hayley: hands clasped neatly in her lap}
+\splitConvo{``I'm afraid so.''}{}
+\splitConvo{``You received this message how recently?''}{}
+\splitConvo{``Three days ago.''}{}
+\splitConvo{``You received a message from Ms. Vorrutyer, three days ago. At what location?''}{}
+\splitConvo{Hayley gives Senator Emeritus Langdon's address in Terminus.}{}
+\splitConvo{``Was this message addressed to you specifically?'' asks the Fili.}{}
+\splitConvo{``\hl{Not by name, but by manner, yes}\footnote{\textbf{q.google }This being a very curious phrase (describing an even more curious circumstance), I'm surprised the Fili did not pursue it further. Well not really surprised (he's clearly smart enough to avoid it), but wow it would've amusing and terrifying to see where it would go. \textsubscript{09/25/14 4:43pm}}\footnote{$\rightarrow$\textbf{Suko T }I don't know if Nate did but my impression was the Fili understood exactly what Hayley meant. All she was saying was that she was not addressed by name but that the person was facing her and talking to her in a manner that conveyed the intention that the words were meant for her. Obviously. \textsubscript{10/01/14 12:16am}}\footnote{$\rightarrow$\textbf{q.google }Obviously :). I can still see a not-so-friendly-to-Hayley-or-Gillian third party pressing the Fili pretty hard about it, even if it made total sense to the Fili. \textsubscript{10/05/14 1:34pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It would be fair to say that the Fili knew where he wanted plausible deniability... \textsubscript{10/05/14 3:23pm}}.''}{}
+\splitConvo{``So the message was delivered verbally then.''}{}
+\splitConvo{``Correct.''}{}
+\splitConvo{\hl{``And the extent of the message to you was, and I quote, 'Hi'.''}\footnote{\textbf{Suko T }I loved this bit so much. \textsubscript{09/17/14 2:08am}}\footnote{$\rightarrow$\textbf{q.google }+1 \textsubscript{09/25/14 4:41pm}}}{}
+\splitConvo{``That is correct,'' verifies Hayley.}{}
+\splitConvo{``Very good. This message has been noted. Is there anything else you wish to add, with regard to this matter?''}{}
+\splitConvo{``I believe that I have seen her walking and hale, but it was some time ago and I do not know how her physical state has changed since then.''}{}
+\splitConvo{``As Ms. Vorrutyer's Fili and lawyer, I would legally advise you not to include that as part of the evidence here.''``Very well.''}{}
+\splitConvo{``Best to be succinct when possible. I will advise the the courts that she is alive and her estates should continue to be as such. Secondly, there is a request lodged against several of Ms. Vorrutyer's properties, investments and corporations for what I believe, at this time, which is to say within the last 8 hours, somewhere between 10-15\% above market value. The entity in question is offering to buy part or all of these estates immediately for said prices, if she is amenable. As her proxy, this decision falls to you. Do you have any questions?''}{Imagining Hayley in lady's cammo 80's power suit.}
+\splitConvo{``I do. I have never completed a business transaction like this. I'm afraid I do not understand all the implications of selling all that all at once. Will that not affect the market?''}{}
+\splitConvo{``I hesitate to cogitate extensively on the effect upon such large system as the market. This is not a severe reduction of her overall asset portfolio. You can choose to sell any or all of it. The entities in question are aiming for controlling interest in the corporations, and are willing to pay a fair price for them. Most of these companies have been stable to stagnant for the last five years''}{}
+\splitConvo{``Have these entities offered on Ms. Vorrutyer's holdings previously or are they new?'''}{}
+\splitConvo{``Mr. Langdon has not to my knowledge launched a request of this nature before.'''}{}
+\splitConvo{``And he is the only requestor for all of these?'''}{}
+\splitConvo{``Yes it will transfer to his estate. It is not an abnormal request. As is usual, the money would be in a mix of water credits and stakes in other companies.''``May I ask when the request for purchase was lodged?''``Yes, it was lodged two weeks ago but we were unable to find any other proxies available until now.''``Is the estate in need of funds to sustain itself?'''}{Hayley's questions are too clever and insightful by far!}
+\splitConvo{``If things hold steady, the estate should be fine in perpetuity. If things became very bad, it is possible the estate would fall into disrepair and may need to be sold off.'''}{}
+\splitConvo{``I understand. And I have prepared my answer.'''}{}
+\splitConvo{``I am prepared to receive it.'''}{}
+\splitConvo{``I would like to very politely, cordially, refuse this offer.'''}{}
+\splitConvo{``Very well. I am given to understand, by your statement just now, that you would like to very cordially refuse this offer for purchase of these properties by Mr. Langdon at this time.'''}{}
+\splitConvo{``Yes.'''}{so prepared. so polite.}
+\splitConvo{``And you sign it as proxy for Ms. Gillian Vorrutyer.'''}{}
+\splitConvo{``Yes, I sign this as proxy for Ms. Gillian Vorrutyer.'''}{}
+\splitConvo{``Noted. Very well then. I have not been in contact with Ms. Vorrutyer for some time now. That time has exceeded a certain threshold that was set by her to me at an earlier date. Given that, I am required to request that you carry out certain instructions. The first is that you sign this sheet.'' He hands Hayley a sheet of paper.'}{FUCK YOU LANGDON.}
+\splitConvo{Hayley looks at the paper hesitantly. ``As an Incorporated, am I allowed to sign this?'''}{}
+\splitConvo{``She asked me to instruct you to sign this sheet. I do not believe there are any legal ramifications, although it is an interesting legal situation.''``Her instructions are clear, thank you.'' Hayley reads the paper. It says that if Gillian does not countermand the order on this sheet within a year and a day of the signing of this form, Hayley will be released from service and given a set amount of properties and assets. The Fili has authorization to sell off certain holdings to finance this if necessary. Hayley reaches the end of the paper and just stares at it, lost in thought. After a minute or two, she blinks and then signs the paper. Her signature is clumsy, barely better than an illiterate ``X'''}{}
+\splitConvo{``It is my understanding, from what I just witnessed, that you have signed the piece of paper dated \_\_\_\_ marked serial \#\_\_\_\_\_\_ at this time and on this date.''``That is correct.''``Noted. I was also instructed to give this to you.'' He hands Hayley a box.'}{OMG! Hayley may one day be free!!  Jaya should totally find out about this and ``help''!}
+\splitConvo{``Thank you.'' Hayley takes the box and sets it in her lap. She doesn't open it.'}{}
+\splitConvo{``I have noted at this time that you have received from Gillian Vorrutyer, one bank box numbered \_\_\_ held in trust by me until this date.'''}{}
+\splitConvo{``That is correct.'''}{}
+\splitConvo{``Do you have any further questions?'' asks the Fili.``Do you know if there will be any further appointments?'''}{What?s in the box? WHY won?t Hayley just OPEN things RIGHT AWAY??}
+\splitConvo{``There may be other business matters that come up. If you leave forwarding instructions, I can reach you at that place for a more alacritous response. If you wish, you are welcome to stop by here at any time to check into the estate, as current proxy for Gillian Vorrutyer.'''}{}
+\splitConvo{``Thank you.'''}{}
+\splitConvo{``\hl{I must ask one more thing. Correct me if I misunderstood or misperceived, at the beginning of our conversation you indicated that you had brought a weapon here because of the likelihood that you might die.'''}}{}
+\splitConvo{\hl{Hayley frowns a little and thinks. She clarifies, ``The \textit{possibility }that I might die, the likelihood that I will be attacked, yes.'''}}{The Fili is burpy.}
+\splitConvo{\hl{``I apologize for the miscomprehension. This has been noted and edited}\footnote{\textbf{q.google } \textsubscript{09/25/14 4:48pm}}. \hl{Do you expect to cease to be Ms. Gillian Vorrutyer's proxy in the immediate future?''``No. I do not.''}'}{Hayley?s shore leave sounds like a the premise of a romcom.  What wacky adventures will she go on while being a proxy?  Will Gillian return ?in time??}
+\splitConvo{\hl{``And you think there may be a possibility that you may die.'''}}{}
+\splitConvo{\hl{``Yes.''}}{}
+\splitConvo{\hl{``Very well. So that I am clear- there is a logical inconsistency between your expectation of death and remaining her proxy for the foreseeable future. This is your assertion at this time and date.''``Yes,'' says Hayley firmly.'}}{}
+\splitConvo{`\hl{`Noted}\footnote{\textbf{q.google }I love Fili-speak :) \textsubscript{09/25/14 4:49pm}}. Is there anything else you wish to ask me?'''}{}
+\splitConvo{``Is there any need for me to visit her home estate?'''}{}
+\splitConvo{``It is my understanding that you do not need to do so, the staff is maintaining it, but you are of course authorized to visit it if you wish to do so.'''}{}
+\splitConvo{``Thank you. I have no further questions.'''}{}
+\splitConvo{``Very well, this meeting is concluded. I must warn you that at this time, you are no longer under Fili-Client privilege. Anything you say will be generally queryable.'''}{}
+\splitConvo{``I understand.'' Hayley picks up the box, and packs it securely in her backpack. She shoulders her rifle and turns to leave.'}{}
+\splitConvo{``If I may make one more editorial comment?'''}{}
+\splitConvo{Hayley pauses and turns back. ``Yes.'''}{}
+\splitConvo{``You were both a delight to work with and very pleasing.'''}{}
+\splitConvo{``Thank you. I have felt likewise,'' says Hayley with a delighted smile.'}{}
+\splitConvo{``Ah. Then I hope to see you again in the future.'''}{}
+\splitConvo{``So do I.'''}{}
+\splitConvo{``I am here every day.'''}{}
+\splitConvo{``That is good to know. Thank you,'' says Hayley.'}{}
+\splitConvo{``I hope you take advantage of that information.'''}{}
+\splitConvo{Hayley nods and smiles. ``I may. Thank you.'''}{}
+\splitConvo{``That's good to hear. \hl{And noted.''}\footnote{\textbf{Suko T }Dying. Of. Laughter. :D \textsubscript{09/17/14 2:06am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }I think this is the closest I've gotten to channeling Dumas-style diction. \textsubscript{09/18/14 10:44am}}\footnote{$\rightarrow$\textbf{q.google }Dumas: Ooooh. \textsubscript{09/25/14 4:49pm}}'}{}
+\splitConvo{Hayley goes to Gillian's estate and greets the staff. She heads to her room and opens the box. Inside are two sheaves of documents tied with ribbons, sealed with Gillian's seal. Hayley opens the slightly more homogenous one first. The first few documents are lists of companies and the companies they are owned by or that they own. Hayley doesn't know what a shell company is but she can tell that there is a complicated chain of ownership for some of these companies and that Gillian's actual ownership percentages are obfuscated. There are other documents that Hayley really doesn't understand that seem to be some very complicated business accounting.'}{CALLED IT!  Totally macked on by the Fili.  ?Fili Mating Rituals?}
+\splitConvo{\hl{The next few documents are lists of people with sketches and notes about them}\footnote{\textbf{Nathaniel Ford }I may bring up more things from this in the future, if it makes sense. \textsubscript{09/18/14 10:44am}}\footnote{$\rightarrow$\textbf{Suko T }I figured, it is good ``Nose for Breadcrumbs'' fodder. :) \textsubscript{09/19/14 4:10pm}}. Some of the people and information Hayley already knows from previous conversations with Gillian, but much of it she does not, especially now that some of these names mean something more to her than they did before. The information ranges wildly, from notes on business agreements and alliances to descriptions of adulterous relationships, societal scandals and corruption.'}{BOX!!   Yawn, business accounting proxy stuff.}
+\splitConvo{Hayley scans the documents for a few names in particular (Marechenko, Bennett, Stanislav, Langdon) or any names she recognizes.'}{OMG!!!  Give this to Rook!!!}
+\splitConvo{Marechenko- his is the shortest entry of the four she looks for. Next to his name is just a number, it looks like it could be an encoded bank vault number just like the one on the box that Hayley received from the Fili.'}{}
+\splitConvo{Bennett- He fucked over this person, he's got dirt on this person, this person has a gripe against him, he's got this other person in his pocket, he sleeps around, his wife doesn't care....definitely a politician asshole.'}{}
+\splitConvo{Stanislav- Apparently knew Samson Vorrutyer (Gillian's father). Generally bad news. There's a bunch of stuff that has been blotted out. The last entry under his name is ``many assets'' and starts listing bank numbers and then cuts off with a ``fuck it.'''}{Dirt all over.  Ho bag}
+\splitConvo{Langdon (Senator Emeritus)- Former senator. Highly influential. Made a number of good deals. Notes that he has a son in the TA, crippled in the war. Suspicions of nepotism. The final note under his name is ``Be careful, we'll have to pay him back someday'' with the implication that Gillian owes Langdon something. It doesn't appear that the notes have been updated with any of Hayley's recent information since she started working with the TA.'}{}
+\splitConvo{Octavia- not in the notes at all.'}{Bad news.}
+\splitConvo{Ogleby- just a mark, seems to indicate a favorable impression.'}{}
+\splitConvo{There are several Agent names but the only one Hayley recognizes is Agent Drake Malak. Hayley doesn't notice at the time but on the second-read through later she sees that Gillian's handwriting for her notes on Agent Malak gets a little scripted and flowy, compared to any of her other notes.'}{Gillian was totally crushing on Drake.  Barf.}
+\splitConvo{The second stack of papers is an assortment of papers. On the top of the stack is a beautifully drawn portrait of a woman marrying a man. Or at least Hayley assumes it is a man, that area has been scratched and blotted out and is unrecognizable. The woman looks a little like Gillian Vorrutyer but is definitely not her. The drawing looks old. The woman doesn't look like any of Samson's wives, though Hayley can't be certain.'}{}
+\splitConvo{Below that is the obituary of a National who worked in Terminus, and she appears to have been stabbed to death by an unknown assailant on her (unaccompanied) way home from work. She died over 40 years ago.'}{}
+\splitConvo{Next is a TA report of the death of a presumed prostitute, a few years after the National died. Not much investigation was done, it was chalked up to: 'she was a low class prostitute who got stabbed.''}{}
+\splitConvo{The rest of the papers are a mix of TA Reports and obituaries, for a total of 17 deaths. The obituaries are from papers/publicly posted notices and the victims are generally Nationals or Incorporated. The victims in the TA Reports are split between Franchise prostitutes and Citizens. The TA reports for the prostitutes are pretty much all: 'We found a dead hooker. Whelp, her fault.' The Citizen reports are not-too-subtly 'Citizen death that we are whitewashing/blaming on someone unfortunate/covering up and will not investigate further.''}{SERIAL KILLER ALERT}
+\splitConvo{All of the victims are women, approximately about 22 years old. They are in chronological order, with the oldest (the TA National) at the top of the stack. One of the most recent deaths is a woman with the stage name 'Winsome Angel' who worked at the brothel Heaven. Apparently Winsome Angel died shortly after Hayley arrived at Heaven, so Hayley may have heard about her but probably doesn't remember her.'}{``HEAVEN''?!? WTF.}
+\splitConvo{The only exception to the chronological order is the last TA report at the bottom of the stack. The victim's name is Alison Vorrutyer and she died 40 years ago. The picture of Alison in the report seems to match the drawing of the woman. In the chronology of the reports/obituaries, she was the third death. She was aged 22 at the time of death. Hayley might eventually put together that the terminology marking up the TA Report means, ``We aren't going to investigate this because scandal!'''}{I should stop suggesting the names of my co-workers during tabletop games.  Does not end well.}
+\splitConvo{When Alison's death is placed in chrono-order with the others, there is a pattern to the deaths. There are a couple years' space between the first two, then a period of acceleration after Alison's death wherein there are, at the height, three deaths in one year. Then they begin to slow, down to about one every three years. No deaths occurred after Hayley was bought by Samson Vorrutyer two years ago.'}{SO MUCH HAYLEY BACKGROUND WE STILL DON?T KNOW!!}
+\splitConvo{The way that the women died is notable too. As time progresses the scar patterns of their wounds get closer and closer to the ones Hayley bears. They are getting increasingly intricate and ritualistic.'}{}
+\splitConvo{Hayley finishes reading all the documents and then locks them in the house vault. She gets her hair styled and cut properly, takes a real shower, gives herself a facial, restocks all her cosmetics and skincare items and exercises in the house gym. She packs a small wardrobe: some fancy sexy dresses from Samson, and a few immaculately tailored bodyguard suits from Gillian.'}{}
+\splitConvo{Then Hayley retrieves the documents again, and spends the evening and most of the night carefully memorizing them. She starts with the business documents and Gillian's notes on people, and then moves on to the deaths. Reading the latter distresses her. If it wasn't for Swan's anti-anxiety medication, she probably would not sleep well that night. \hl{Once she memorizes them as best she can}\footnote{\textbf{Suko T }Pre-loading ``Nose for Breadcrumbs'' :) \textsubscript{09/18/14 1:27am}}, she l\hl{ocks them away in the house vault again.}\footnote{\textbf{Nathaniel Ford }So, just to be clear the documents are currently at the Vorruyter House Vault. \textsubscript{09/23/14 12:51am}}\footnote{$\rightarrow$\textbf{Suko T }Yes. In Hayley's mind, that's the safest place for them. \textsubscript{09/23/14 12:59am}}}{}
 
 \sceneHeadline{Shore Leave Epilogue}
 
