--- a/4T/ch7.tex
+++ b/4T/ch7.tex
@@ -185,7 +185,7 @@ When the man hesitates, distracted by Hayley's pretty face, she shoots him with 
 
 
 
-Jaya wrestles with the woman and punches her into unconsciousness {[}Challenge: Subdue naked chick{]}.  She notices that Oliver is Not Dead YetTM and he is staggering to his feet woozily.  Jaya moves to help him stand.  She sees the the burn marks on his stomach and realizes what he had done.  They start choking on the smoke that is filling the corridor.  Oliver reaches down and starts hauling the unconscious woman out of the corridor.  Jaya helps carry the woman out into the area where Hayley and Jonah are.  Hayley tells Jaya that she shot a guy but doesn't think she killed him.  Jaya asks her to try harder next time.
+Jaya wrestles with the woman and punches her into unconsciousness {[}Challenge: Subdue naked chick{]}.  She notices that Oliver is Not Dead Yet\texttrademark and he is staggering to his feet woozily.  Jaya moves to help him stand.  She sees the the burn marks on his stomach and realizes what he had done.  They start choking on the smoke that is filling the corridor.  Oliver reaches down and starts hauling the unconscious woman out of the corridor.  Jaya helps carry the woman out into the area where Hayley and Jonah are.  Hayley tells Jaya that she shot a guy but doesn't think she killed him.  Jaya asks her to try harder next time.
 
 
 \sceneHeadline{The Archive }
@@ -314,4 +314,3 @@ Oliver: 3
 \textsubscript{last edited by \textbf{Nathaniel Ford} @ 05/07/15 4:28pm}
 % Exported @ 08/22/15 3:51pm
 \end{flushright}
-
