--- a/4T/ch19.tex
+++ b/4T/ch19.tex
@@ -44,7 +44,7 @@ Jaya says something noncommittal and keeps edging toward the door.  She bolts as
 
 \sceneHeadline{Jonah and Trenton}
 
-Jonah goes to Trenton's lab.  Rook is there talking with Trenton.  ``She left the station with two Mark 2's and two of those.....\hl{???}\footnote{\textbf{Suko T }This whole convo was not noted very well, I was catching up on Jaya vs Morgan notes.  Please fix if you can. \textsubscript{04/09/13 11:18pm}}''  ``You should ask Jari about that.'' ``Anything up to and including rifles''\footnote{\textbf{Suko T }This whole convo was not noted very well, I was catching up on Jaya vs Morgan notes.  Please fix if you can. \textsubscript{04/09/13 11:18pm}}  
+Jonah goes to Trenton's lab.  Rook is there talking with Trenton.  ``She left the station with two Mark 2's and two of those.....\hl{???''  ``You should ask Jari about that.'' ``Anything up to and including rifles''}\footnote{\textbf{Suko T }This whole convo was not noted very well, I was catching up on Jaya vs Morgan notes.  Please fix if you can. \textsubscript{04/09/13 11:18pm}}  
 
 Rook asks Jonah, ``Can I help you?''  At Jonah's no, Rook leaves the lab.
 
@@ -235,7 +235,9 @@ Hayley can hear Morgan click the intercom off and on.
 
 ``It depends on the orders.''
 
-``But you think you would hurt someone else?  You are not in the best psychological condition right now.''``No.  I am angry and upset.''
+``But you think you would hurt someone else?  You are not in the best psychological condition right now.''
+
+``No.  I am angry and upset.''
 
 ``Well I hear you have requested Shore Leave, you should go rest. Go home.''
 
